# Spond-classes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  classes.html  example.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  python-package-uv.yml  python-poetry-package.yml
.run/: pytest in tests.run.xml
doc_templates/: module.html.jinja2
docs/: index.html  search.js  spond_classes.html
docs/spond_classes/: types_.html  typing.html
spond_classes/: __init__.py  chat.py  classes.py  event.py  group.py  member.py  profile.py  profile_.py  role.py  spond_event.py  spond_group.py  spond_member.py  spond_role.py  spond_subgroup.py  subgroup.py  types.py
src/spond_classes/: __init__.py  event.py  group.py  member.py  profile_.py  role.py  subgroup.py  typing.py
tests/: __init__.py  conftest.py  test_event.py  test_group.py  test_group_children.py  test_group_complex.py  test_group_hierarchy.py  test_member.py  test_profile.py  test_role.py  test_spondevent.py  test_spondgroup.py  test_spondmember.py  test_spondrole.py  test_spondsubgroup.py  test_subgroup.py  utils.py
