[project]
name = "spond-classes"
version = "0.18.0"
dependencies = [
    "pydantic[email]>=2.7.1",
]
requires-python = ">=3.10"
authors = [
    { name = "elliot-100", email = "3186037+elliot-100@users.noreply.github.com" }
]
description = "Unofficial class abstraction layer for the `spond` library package."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://elliot-100.github.io/Spond-classes/"
Repository = "https://github.com/elliot-100/Spond-classes/"
Issues = "https://github.com/elliot-100/Spond-classes/issues/"
Changelog = "https://github.com/elliot-100/Spond-classes/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pdoc>=16.0.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
enable_error_code = ["ignore-without-code"]  # Require specific codes for ignores
warn_unused_configs = true
strict = true
disallow_any_unimported = true  # Disallow Any types resulting from unfollowed imports
no_implicit_optional = true  # Don't assume arguments with default values of None are Optional

[tool.ruff.lint]
future-annotations = true
select = ["ALL"]
ignore = [
    # Rules that conflict with Ruff formatter:
    "COM812",  # Trailing comma missing
    # Other rules:
    "D205",  # 1 blank line required between summary line and description
]
extend-unsafe-fixes = [
    "TC003",  # typing-only-standard-library
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
# Rules that aren't relevant in tests:
"**/{tests}/*" = [
    "S101",  # Use of assert detected
]
"src/spond_classes/__init__.py" = [
    "D400",  # First line should end with a period
    "RUF022", # `__all__` is not sorted
]
"src/spond_classes/typing.py" = [
    "ANN401"  #  Dynamically typed expressions (typing.Any)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
